--- a/src/app/modules/currency-exchange/currency-exchange.component.scss
+++ b/src/app/modules/currency-exchange/currency-exchange.component.scss
@@ -11,3 +11,12 @@
 h1 {
   text-align: center;
 }
+
+// .tp-form {
+//   min-width: 150px;
+//   max-width: 500px;
+//   width: 100%;
+// }
+// .tp-full-width {
+//   width: 100%;
+// }
